<resources>
    <string name="app_name">Sleep Fantasy</string>
    <string name="nombre">NOMBRE</string>
    <string name="edad">EDAD</string>
    <string name="almacenar">ALMACENAR</string>
    <string name="grabar">GRABAR</string>
    <string name="salvar">SALVAR</string>
    <string name="configuraci_n">CONFIGURACIÓN</string>
    <string name="misiones">MISIONES</string>
    <string name="desaf_os">DESAFÍOS</string>
    <string name="guardar">GUARDAR</string>
    <string name="eliminar">ELIMINAR</string>
    <string name="calidad">CALIDAD</string>
    <string name="sonidos_captados">SONIDOS CAPTADOS</string>
    <string name="estad_sticas">ESTADÍSTICAS</string>
    <string name="tipo_de_filtro">TIPO DE FILTRO</string>
    <string name="dato">DATO</string>
    <string name="consultar">CONSULTAR</string>
    <string name="vigilia">VIGILIA</string>
    <string name="ligero">LIGERO</string>
    <string name="profundo">profundo</string>
    <string name="rem">REM</string>
    <string name="ajustes">AJUSTES</string>
    <string name="grabar_audios">GRABAR AUDIOS</string>
    <string name="almacenar_grabaciones">ALMACENAR GRABACIONES</string>
    <string name="calidad_de_grabaci_n">CALIDAD DE GRABACIÓN</string>
    <string name="ok">OK</string>
    <string name="fecha">FECHA</string>
    <string name="gr_ficas">GRÁFICAS</string>
    <string name="filtro">filtro</string>
    <string name="playlists">playlists</string>
    <string name="naturaleza">naturaleza</string>
    <string name="musica_clasica">musica clasica</string>
    <string name="ruido_ambiental">ruido ambiental</string>
    <string name="ambiental">ambiental</string>
    <string name="crear_playlist">crear playlist</string>
    <string name="ruido_blanco">ruido blanco</string>
    <string name="selecci_n">SELECCIÓN</string>
    <string name="crear">crear</string>
    <string name="nombre_playlist">nombre playlist</string>
    <string name="a_adir">añadir</string>
    <string name="agregar_audios">agregar audios</string>
    <string name="avanzar_en_seleccion_de_personaje">Avanzar en seleccion de personaje</string>
    <string name="desafios_completados">DESAFIOS COMPLETADOS</string>
    <string name="desafios_fallados">DESAFIOS FALLADOS</string>
    <string name="desafios_sin_asignar">DESAFIOS SIN ASIGNAR</string>
    <string name="listado">LISTADO</string>
    <string name="cambiar_tema">cambiar tema</string>
    <string name="cambiar_aspecto">cambiar aspecto</string>
    <string name="recompensa_ganada">RECOMPENSA GANADA</string>
    <string name="recompensa">recompensa</string>
    <string name="has_ganado_la_recompensa">HAS GANADO LA RECOMPENSA:</string>
    <string name="modificar_notificacion">modificar notificacion</string>
    <string name="monstruos_de_pante_n">MONSTRUOS DE PANTEÓN</string>
    <string name="mosntruo_de_pesadilla">MOSNTRUO DE PESADILLA</string>
    <string name="nombre_del_monstruo">Nombre del Monstruo</string>
    <string name="sleep_fantasy_recomienda">SLEEP FANTASY RECOMIENDA</string>
    <string name="entendido">¡entendido!</string>
    <string name="lo_har">lo haré</string>
    <string name="lo_hare">¡lo haré!</string>
</resources>