<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".playlistSelector"
    android:background="@color/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35sp"
            android:gravity="center"
            android:textSize="30sp"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:text="@string/playlists"/>

        <Button
            android:layout_width="100sp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:layout_gravity="center"
            android:background="@color/button"
            android:textSize="15sp"
            android:textAllCaps="true"
            android:text="@string/crear_playlist"/>

        <Button
            android:id="@+id/selectNature"
            android:layout_width="200sp"
            android:layout_height="match_parent"
            android:layout_marginTop="5sp"
            android:layout_gravity="center"
            android:background="@color/buttonData"
            android:textSize="20sp"
            android:textAllCaps="true"
            android:text="@string/naturaleza"/>

        <Button
            android:id="@+id/selectClassicMusic"
            android:layout_width="200sp"
            android:layout_height="match_parent"
            android:layout_marginTop="5sp"
            android:layout_gravity="center"
            android:background="@color/buttonData"
            android:textSize="20sp"
            android:textAllCaps="true"
            android:text="@string/musica_clasica"/>

        <Button
            android:id="@+id/selectWhiteNoise"
            android:layout_width="200sp"
            android:layout_height="match_parent"
            android:layout_marginTop="5sp"
            android:layout_gravity="center"
            android:background="@color/buttonData"
            android:textSize="20sp"
            android:textAllCaps="true"
            android:text="@string/ruido_blanco"/>

        <Button
            android:id="@+id/selectAmbientNoise"
            android:layout_width="200sp"
            android:layout_height="match_parent"
            android:layout_marginTop="5sp"
            android:layout_marginBottom="35sp"
            android:layout_gravity="center"
            android:background="@color/buttonData"
            android:textSize="20sp"
            android:textAllCaps="true"
            android:text="@string/ambiental"/>
    </LinearLayout>
</ScrollView>