<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/configuration"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/layout_background_purple">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35sp"
            android:layout_gravity="center"
            android:text="@string/ajustes"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            android:textStyle="bold" />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:rowCount="6"
            android:layout_marginTop="10sp">

            <!-- Primera fila -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/nombre"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="1"
                android:textAlignment="center"
                android:inputType="text"
                android:textColor="#FFFFFF"
                android:textSize="20sp"/>

            <!-- Segunda fila -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="0"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:text="@string/edad"/>

            <EditText
                android:id="@+id/age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:contentDescription="@string/editTextAge"/>

            <!-- Tercera fila -->
            <TextView
                android:layout_width="150sp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp"
                android:layout_row="3"
                android:layout_column="0"
                android:gravity="center"
                android:text="@string/grabar_audios"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

            <CheckBox
                android:id="@+id/recordSnoring"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_row="3"
                android:layout_column="1" />

            <!-- Cuarta fila -->
            <TextView
                android:layout_width="150sp"
                android:layout_height="wrap_content"
                android:layout_row="2"
                android:layout_column="0"
                android:gravity="center"
                android:text="@string/almacenar_grabaciones"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

            <CheckBox
                android:id="@+id/saveAudios"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_row="2"
                android:layout_column="1" />

            <!-- Quinta fila -->
            <TextView
                android:layout_width="150sp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp"
                android:layout_row="4"
                android:layout_column="0"
                android:gravity="center"
                android:text="@string/calidad_de_grabaci_n"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btQuality"
                android:layout_width="50sp"
                android:layout_height="30sp"
                android:layout_gravity="center_vertical"
                android:layout_row="4"
                android:layout_column="1"
                android:background="@color/buttonData_background_purple"
                android:textAllCaps="true"
                android:textColor="@android:color/black"/>
        </GridLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
            <Button
                android:id="@+id/changeTheme"
                android:layout_width="80dp"
                android:layout_height="35dp"
                android:layout_marginTop="5sp"
                android:layout_gravity="center"
                android:background="@color/button_background_purple"
                android:textColor="#FFFFFF"
                android:text="@string/cambiar_tema"/>

            <Space
                android:layout_width="10sp"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/changeAvatarSkin"
                android:layout_width="80dp"
                android:layout_height="35dp"
                android:layout_marginTop="5sp"
                android:layout_gravity="center"
                android:background="@color/button_background_purple"
                android:textColor="#FFFFFF"
                android:text="@string/cambiar_aspecto"/>
        </LinearLayout>

        <Button
            android:id="@+id/savePreferences"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_marginTop="10sp"
            android:layout_marginBottom="35sp"
            android:layout_gravity="center"
            android:background="@color/button_background_purple"
            android:textColor="#FFFFFF"
            android:text="@string/guardar"/>
    </LinearLayout>
</ScrollView>